
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_container"
    tools:context="com.algamil.mywaystore.ui.fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:layout_margin="@dimen/_10sdp"
            >

            <ImageView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_160sdp"
                android:src="@drawable/logo"
                android:layout_marginBottom="@dimen/_50sdp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_phone_login"
                app:startIconDrawable="@drawable/phone"
                android:hint="@string/phone"
                style="@style/textinput_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_phone_login"
                    android:inputType="phone|number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textinput_style"
                android:layout_below="@+id/txl_password_login"
                android:hint="@string/prompt_password"
                android:layout_margin="@dimen/_20sdp"
                android:id="@+id/tx_password"
                app:startIconDrawable="@drawable/password"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_edit_password"
                    android:layout_below="@+id/tx_password_login"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="@dimen/_270sdp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear_foget"
                android:layoutDirection="ltr"
                android:layout_below="@+id/tx_password"
                android:weightSum="5"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:id="@+id/foget"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:text="@string/forget_password"
                    android:layout_weight="4"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:checked="true"
                    android:id="@+id/remember_check"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/title_activity_login"
                android:id="@+id/btn_login"
                style="@style/btn_shape" />

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/sign_up"
                android:id="@+id/btn_sign_up"
                style="@style/btn_shape" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
