<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.algamil.mywaystore.ui.fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrolling"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/myprofile"
                android:id="@+id/select_photo_profile"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_name_profile"
                app:startIconDrawable="@drawable/name"
                android:hint="@string/name"
                style="@style/textinput_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_name_profile"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_email_profile"
                app:startIconDrawable="@drawable/email"
                android:hint="@string/prompt_email"
                style="@style/textinput_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_email_profile"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_phone_profile"
                app:startIconDrawable="@drawable/phone"
                android:hint="@string/phone"
                style="@style/textinput_style"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_phone_profile"
                    android:inputType="phone|number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_location_profile"
                app:startIconDrawable="@drawable/location"
                android:hint="@string/location"
                style="@style/textinput_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_location_profile"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textinput_style"
                android:layout_below="@+id/tx_email"
                android:hint="@string/prompt_password"
                android:id="@+id/tx_password_profile"
                app:startIconDrawable="@drawable/password"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_edit_password_profile"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/change"
                android:id="@+id/btn_change_fragment_profile"
                style="@style/btn_shape" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
