<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_password"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.algamil.mywaystore.ui.fragments.PasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txl_phone_login"
                android:hint="@string/code"
                style="@style/textinput_style">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tx_code"
                    android:inputType="phone|number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textinput_style"
                android:layout_below="@+id/txl_password_login"
                android:hint="@string/prompt_password"
                android:layout_margin="@dimen/_20sdp"
                android:id="@+id/tx_password"
                app:startIconDrawable="@drawable/password"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_edit_password"
                    android:layout_below="@+id/tx_password_login"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/textinput_style"
                android:layout_below="@+id/txl_password_login"
                android:hint="@string/prompt_password"
                android:layout_margin="@dimen/_20sdp"
                android:id="@+id/tx_confirm_password"
                app:startIconDrawable="@drawable/password"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_edit_confirm_password"
                    android:layout_below="@+id/tx_password_login"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="@dimen/_270sdp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear_foget"
                android:layout_below="@+id/tx_password"
                android:weightSum="5"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:id="@+id/send_again"
                    android:layout_gravity="start"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:text="@string/send_again"
                    android:layout_weight="4"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/change_password"
                android:id="@+id/btn_change"
                style="@style/btn_shape" />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
